Fix overflowing Quill editor on edit page 'production notes' field.

--- a/budget/staticapp/src/scss/_quill_theme.scss
+++ b/budget/staticapp/src/scss/_quill_theme.scss
@@ -329,6 +329,13 @@ $quill-popup-border-color: #CCCCCC;
         }
     }
 
+    &.ql-container {
+        .ql-editor {
+            height: 270px;
+            overflow: scroll;
+        }
+    }
+
     .ql-container {
         box-sizing: border-box;
         cursor: text;
